import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'a { transition: opacity 200ms; transition-property: transform; will-change: background; }',
		'a { transition: margin 1s, display 1s allow-discrete; will-change: color, width; }',
		'a { transition-property: border, margin-inline, transform-origin; will-change: transition, transition-property; }',
		'a { transition: 200ms; }',
		...['all', 'none', 'ease', 'ease-in', 'ease-out', 'ease-in-out', 'linear', 'step-start', 'step-end', 'normal', 'allow-discrete'].map(name => `a { transition: ${name} 200ms; }`),
		'a { transition-property: all; }',
		'a { transition-property: none; }',
		'a { will-change: auto; }',
		'a { will-change: scroll-position, contents; }',
		...['inherit', 'initial', 'unset', 'revert', 'revert-layer', 'revert-rule'].map(name => `a { transition: ${name}; transition-property: ${name}; will-change: ${name}; }`),
		'a { TRANSITION: OPACITY 200MS EASE; TRANSITION-PROPERTY: TRANSFORM; WILL-CHANGE: CONTENTS; }',
		String.raw`a { tr\61 nsition: \6f pacity 200m\73  \65 ase; transition-property: tr\61 nsform; will-change: \63 ontents; }`,
		String.raw`a { transition: \69 nherit; transition-property: \61 ll; will-change: \61 uto; }`,
		'a { transition: /* before */ INHERIT /* after */ !important; will-change: /* before */ revert-layer /* after */; }',
		String.raw`a { transition-property: \00006f pacity; will-change: TRANS\000046 ORM; }`,
		'a { -webkit-transition: opacity 1s; -moz-transition-property: transform; }',
		'a { transition: --progress 1s; transition-property: --progress; will-change: --progress; }',
		String.raw`a { transition: \2d \2d progress 1s; will-change: \2d \2d progress; }`,
		'a { transition: -webkit-transfrom 1s; transition-property: -moz-opactiy; will-change: -webkit-transfrom; }',
		String.raw`a { transition: \2d WEBKIT-transfrom 1s; transition-property: -m\6f z-opactiy; }`,
		String.raw`a { will-change: \2d webkit-transfrom, \2d \2d default, --ALL; }`,
		'a { --transition: opactiy 200ms; color: transfrom; animation: opactiy 1s; }',
		String.raw`a { \2d \2d transition: opactiy 200ms; }`,
		'a { transition: var(--transition, opactiy 1s); transition-property: env(properties, transfrom); will-change: attr(data-properties); }',
		'a { transition: opacity 1s cubic-bezier(0, 0, 1, 1), transform 1s steps(2, jump-start), color 1s linear(0, 1); }',
		'a { transition: opacity calc(1s + var(--delay)) EASE-IN-OUT -200ms; }',
		'a { transition: "opactiy"; transition-property: url("transfrom"); will-change: custom(transfrom); }',
		'a { transition: opacity 1s /* opactiy */; will-change: transform !important; }',
		'@supports (transition: opactiy 1s) {}',
		'@supports (transition-property: transfrom) and (will-change: default) {}',
		'@import "a.css" supports(transition: opactiy 1s);',
		'@container style(will-change: transfrom) {}',
		'@font-face { transition: opactiy 1s; }',
		'@PROPERTY --example { will-change: transfrom; }',
		String.raw`@font-palette-values --palette { transition-property: transfrom; } @pr\6f perty --example { transition: opactiy 1s; }`,
		':export { transition: opactiy 1s; } :import("a.css") { will-change: transfrom; }',
		String.raw`:EXPORT { transition-property: transfrom; } :\69 mport("a.css") { transition: opactiy 1s; }`,
		// Repeated shorthand keywords are intentionally not disambiguated as property names.
		'a { transition: ease ease 1s, normal normal 1s; }',
		// General value grammar is left to css/no-invalid-properties.
		'a { will-change: auto, opacity; transition-property: none, opacity; }',
		{
			code: 'a { transition: future-property 1s; transition-property: future-property; will-change: future-property; }',
			languageOptions: {customSyntax: {properties: {'future-property': '<length>'}}},
		},
		{
			code: String.raw`a { transition: FUTURE-PROPERTY 1s; will-change: future\2d property; }`,
			languageOptions: {customSyntax: {properties: {'future-property': '<length>'}}},
		},
	],
	invalid: [
		'a { transition: opactiy 200ms; }',
		'a { transition-property: opactiy; }',
		'a { will-change: transfrom; }',
		'a { transition-property: opacity, transfrom, colr; }',
		'a { will-change: scroll-position, transfrom, contents, opactiy; }',
		'a { transition: 200ms ease opactiy, transfrom 1s steps(2, end) -200ms allow-discrete; }',
		'a { transition: opactiy var(--time); transition-property: var(--name), transfrom; will-change: var(--features), colr; }',
		'a { transition: var(--transition), opactiy 1s; }',
		'a { transition-property: ease, linear, normal, allow-discrete, auto, scroll-position, contents; }',
		...['ease-in', 'ease-out', 'ease-in-out', 'step-start', 'step-end'].map(name => `a { transition-property: ${name}; }`),
		'a { transition: auto 1s, scroll-position 1s, contents 1s; }',
		'a { will-change: ease, normal, allow-discrete; }',
		...['ease-in', 'ease-out', 'ease-in-out', 'linear', 'step-start', 'step-end'].map(name => `a { will-change: ${name}; }`),
		...['none', 'all', 'will-change'].map(name => `a { will-change: ${name}; }`),
		'a { will-change: opacity, all, none, will-change; }',
		'a { transition: default 1s; transition-property: default; will-change: default; }',
		...['inherit', 'initial', 'unset', 'revert', 'revert-layer', 'revert-rule'].map(name => `a { transition: ${name} 1s; transition-property: opacity, ${name}; will-change: ${name}, color; }`),
		'a { TRANSITION: OPACTIY 200ms; WILL-CHANGE: ALL; }',
		String.raw`a { tr\61 nsition: opact\69 y 200ms; will-change: \61 ll; }`,
		String.raw`a { transition-property: opacity, \69 nherit; }`,
		String.raw`a { TRANSITION-PROPERTY: D\45 FAULT; WILL-CHANGE: N\4f NE, WILL\2d CHANGE; }`,
		'a { transition: inherit /* keep */ 1s; transition-property: /* keep */ unset, var(--name); will-change: var(--name), revert-layer; }',
		String.raw`a { -w\65 bkit-transition: opactiy 200ms; -MOZ-transition-property: transfrom; }`,
		String.raw`a { -WEBKIT-WILL-CHANGE: transfrom; will\2d change: opactiy; transition\2d property: colr; }`,
		'a { will-change: İnset, marKer, blocK-size, _opacity; }',
		'a { transition-property: constructor, __proto__; }',
		'a { transition-property: opacityy, opacity-unknown, -transfrom; }',
		'a { transition: /* before */ opactiy /* after */ 1s !important; }',
		'a { transition: "opactiy", transfrom 1s url("colr") custom(default); }',
		'a { will-change: --progress, -webkit-transform, transfrom, --default, default; }',
		'a { transition-property: opacity /* transfrom */, colr; }',
		'a { & > b { transition: opactiy 1s; } }',
		'@media (width > 1px) { a { will-change: transfrom; } }',
		'@supports (transition: opactiy 1s) { a { transition: opactiy 1s; } }',
		'@container (width > 1px) { a { transition-property: opactiy; } }',
		'@layer components { a { will-change: transfrom; } }',
		'@scope (.card) { a { transition: opactiy 1s; } }',
		'a { @starting-style { will-change: transfrom; } }',
		'@supports (will-change: transfrom) { a { will-change: transfrom; } }',
		'@container style(transition-property: opactiy) { a { transition-property: opactiy; } }',
		'@keyframes fade { from { transition-property: opactiy; } to { will-change: transfrom; } }',
		'@-webkit-keyframes fade { 50% { transition: opactiy 1s; } }',
		':root { transition: opactiy 1s; } .card:export { will-change: transfrom; }',
		':export, .card { transition-property: opactiy; }',
		'@media print { :export { transition: opactiy 1s; } a { transition: opactiy 1s; } }',
		{
			code: 'a { transition: future-property 1s, future-proprety 1s; will-change: future-property, future-proprety; }',
			languageOptions: {customSyntax: {properties: {'future-property': '<length>'}}},
		},
		{
			code: 'a { transition: default 1s; will-change: all, none, will-change; }',
			languageOptions: {customSyntax: {properties: {default: '<length>', none: '<length>'}}},
		},
	],
});

test({
	valid: [],
	invalid: [
		{
			code: 'a {\n\ttransition: opact\\69 y 200ms;\n}',
			errors: [{
				messageId: 'no-invalid-property-references/unknown',
				data: {name: String.raw`opact\69 y`, property: 'transition'},
				line: 2,
				column: 14,
				endLine: 2,
				endColumn: 24,
			}],
		},
		{
			code: 'a {\r\n  will-change: /* keep */ ALL;\r\n}',
			errors: [{
				messageId: 'no-invalid-property-references/forbidden',
				data: {name: 'ALL', property: 'will-change'},
				line: 2,
				column: 27,
				endLine: 2,
				endColumn: 30,
			}],
		},
		{
			code: 'a { will-change: marKer, blocK-size, _opacity; }',
			errors: ['marKer', 'blocK-size', '_opacity'].map(name => ({
				messageId: 'no-invalid-property-references/unknown',
				data: {name, property: 'will-change'},
			})),
		},
	],
});
